--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,17 +27,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/level.tscn", "res://scenes/player.tscn")
-current_scene="res://scenes/player.tscn"
+open_scenes=PackedStringArray("res://scenes/level.tscn", "res://scenes/player.tscn", "res://scenes/jump_pad.tscn")
+current_scene="res://scenes/jump_pad.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/level.gd", "res://scripts/player.gd"]
-selected_script="res://scripts/player.gd"
+open_scripts=["res://scripts/jump_pad.gd", "res://scripts/level.gd", "res://scripts/player.gd"]
+selected_script="res://scripts/jump_pad.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
