--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 44,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
-"scroll_position": 6.0,
+"row": 16,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/jump_pad.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 28,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 2,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
