--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/level.tscn", "res://scenes/player.tscn", "res://scenes/jump_pad.tscn", "res://scenes/saw.tscn", "res://scenes/spikeBall.tscn")
-current_scene="res://scenes/saw.tscn"
+current_scene="res://scenes/level.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=4
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/jump_pad.gd", "res://scripts/level.gd", "res://scripts/player.gd", "res://scripts/trap.gd"]
-selected_script="res://scripts/trap.gd"
+selected_script="res://scripts/level.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
