--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,9 +27,9 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/level.tscn", "res://scenes/player.tscn", "res://scenes/jump_pad.tscn", "res://scenes/saw.tscn", "res://scenes/spikeBall.tscn", "res://scenes/tile_map.tscn")
+open_scenes=PackedStringArray("res://scenes/level.tscn", "res://scenes/tile_map.tscn")
 current_scene="res://scenes/level.tscn"
-center_split_offset=-804
+center_split_offset=-905
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=12
