--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -27,16 +27,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/level.tscn", "res://scenes/tile_map.tscn", "res://scenes/bg.tscn", "res://scenes/start.tscn", "res://scenes/player.tscn")
+open_scenes=PackedStringArray("res://scenes/level.tscn", "res://scenes/tile_map.tscn", "res://scenes/bg.tscn", "res://scenes/start.tscn", "res://scenes/player.tscn", "res://scenes/exit.tscn")
 current_scene="res://scenes/level.tscn"
 center_split_offset=-905
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/bg.gd", "res://scripts/jump_pad.gd", "res://scripts/level.gd", "res://scripts/player.gd", "res://scripts/start.gd", "res://scripts/trap.gd"]
+open_scripts=["res://scripts/bg.gd", "res://scripts/exit.gd", "res://scripts/jump_pad.gd", "res://scripts/level.gd", "res://scripts/player.gd", "res://scripts/start.gd", "res://scripts/trap.gd"]
 selected_script="res://scripts/level.gd"
 open_help=[]
 script_split_offset=140
