--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 15,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 14,
+"selection_from_line": 5,
+"selection_to_column": 19,
+"selection_to_line": 15,
 "syntax_highlighter": "GDScript"
 }
 
@@ -17,12 +21,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 3,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 16.0,
-"selection": false,
+"row": 33,
+"scroll_position": 22.0,
+"selection": true,
+"selection_from_column": 3,
+"selection_from_line": 33,
+"selection_to_column": 31,
+"selection_to_line": 33,
 "syntax_highlighter": "GDScript"
 }
 
@@ -73,6 +81,20 @@ state={
 }
 
 [res://scripts/start.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 6,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/exit.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
