--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 45,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 14,
-"selection_from_line": 5,
-"selection_to_column": 19,
-"selection_to_line": 15,
+"row": 39,
+"scroll_position": 21.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -21,16 +17,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 3,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 33,
-"scroll_position": 22.0,
-"selection": true,
-"selection_from_column": 3,
-"selection_from_line": 33,
-"selection_to_column": 31,
-"selection_to_line": 33,
+"row": 17,
+"scroll_position": 12.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
