--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/player.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/textures/bg/Green.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://assets/", "res://assets/textures/", "res://assets/textures/bg/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,11 +27,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/level.tscn", "res://scenes/level_2.tscn", "res://scenes/tile_map.tscn", "res://scenes/bg.tscn", "res://scenes/start.tscn", "res://scenes/player.tscn", "res://scenes/exit.tscn")
-current_scene="res://scenes/level.tscn"
+open_scenes=PackedStringArray("res://scenes/level.tscn", "res://scenes/level_2.tscn", "res://scenes/level_3.tscn", "res://scenes/tile_map.tscn", "res://scenes/bg.tscn", "res://scenes/start.tscn", "res://scenes/player.tscn", "res://scenes/exit.tscn")
+current_scene="res://scenes/level_3.tscn"
 center_split_offset=-905
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
