--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/level.tscn", "res://scenes/level_2.tscn", "res://scenes/level_3.tscn", "res://scenes/tile_map.tscn", "res://scenes/bg.tscn", "res://scenes/start.tscn", "res://scenes/player.tscn", "res://scenes/exit.tscn", "res://scenes/ui_layer.tscn")
-current_scene="res://scenes/level_3.tscn"
+current_scene="res://scenes/level.tscn"
 center_split_offset=-905
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/bg.gd", "res://scripts/exit.gd", "res://scripts/hud.gd", "res://scripts/jump_pad.gd", "res://scripts/level.gd", "res://scripts/player.gd", "res://scripts/start.gd", "res://scripts/trap.gd"]
-selected_script="res://scripts/level.gd"
+open_scripts=["res://scripts/bg.gd", "res://scripts/exit.gd", "res://scripts/hud.gd", "res://scripts/jump_pad.gd", "res://scripts/level.gd", "res://scripts/player.gd", "res://scripts/start.gd", "res://scripts/trap.gd", "res://scripts/ui_layer.gd", "res://scripts/win_screen.gd"]
+selected_script="res://scripts/ui_layer.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
