--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,8 +27,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/level.tscn", "res://scenes/level_2.tscn", "res://scenes/ui_layer.tscn", "res://scenes/start_menu.tscn", "res://scenes/win_screen.tscn", "res://scenes/deathzone.tscn", "res://scenes/level_3.tscn")
-current_scene="res://scenes/level_2.tscn"
+open_scenes=PackedStringArray("res://scenes/level.tscn", "res://scenes/level_2.tscn", "res://scenes/level_3.tscn", "res://scenes/ui_layer.tscn", "res://scenes/start_menu.tscn", "res://scenes/win_screen.tscn", "res://scenes/deathzone.tscn")
+current_scene="res://scenes/level.tscn"
 center_split_offset=-504
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
