--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,19 +19,20 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/level_3.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://assets/textures/", "res://assets/textures/bg/", "res://assets/fonts/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/audio/music.ogg")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://assets/", "res://assets/textures/bg/", "res://assets/audio/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/level.tscn", "res://scenes/level_2.tscn", "res://scenes/level_3.tscn", "res://scenes/ui_layer.tscn", "res://scenes/start_menu.tscn", "res://scenes/win_screen.tscn", "res://scenes/deathzone.tscn")
+open_scenes=PackedStringArray("res://scenes/level.tscn", "res://scenes/level_2.tscn", "res://scenes/level_3.tscn", "res://scenes/ui_layer.tscn", "res://scenes/start_menu.tscn", "res://scenes/win_screen.tscn", "res://scenes/deathzone.tscn", "res://scenes/audio_player.tscn")
 current_scene="res://scenes/level.tscn"
 center_split_offset=-504
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
+selected_bottom_panel_item=12
 
 [ScriptEditor]
 
