--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,15 +28,15 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/level.tscn", "res://scenes/level_2.tscn", "res://scenes/level_3.tscn", "res://scenes/ui_layer.tscn", "res://scenes/start_menu.tscn", "res://scenes/win_screen.tscn", "res://scenes/deathzone.tscn", "res://scenes/audio_player.tscn")
-current_scene="res://scenes/level.tscn"
+current_scene="res://scenes/audio_player.tscn"
 center_split_offset=-504
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=12
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/bg.gd", "res://scripts/exit.gd", "res://scripts/hud.gd", "res://scripts/jump_pad.gd", "res://scripts/level.gd", "res://scripts/player.gd", "res://scripts/start.gd", "res://scripts/start_menu.gd", "res://scripts/trap.gd", "res://scripts/ui_layer.gd", "res://scripts/win_screen.gd"]
+open_scripts=["res://scripts/audio_player.gd", "res://scripts/bg.gd", "res://scripts/exit.gd", "res://scripts/hud.gd", "res://scripts/jump_pad.gd", "res://scripts/level.gd", "res://scripts/player.gd", "res://scripts/start.gd", "res://scripts/start_menu.gd", "res://scripts/trap.gd", "res://scripts/ui_layer.gd", "res://scripts/win_screen.gd"]
 selected_script="res://scripts/level.gd"
 open_help=[]
 script_split_offset=140
